- exit() function now allows an optional string parameter which will be 
  reported to the user as a runtime warning (usually an indicator of why
  the script chose to exit?)
- added an assert command.  assert takes a predicate expression as a 
  parameter.  if the predicate expression does not evaluate to true then
  the currently running script will exit with the message "assertion
  failed".

2.1-beta 14  (24 Mar 07)
===========
- added splice(@array, @insertme, position, n) for modifying an array.  
  works a lot like replaceAt, i.e. up to n elements at the specified
  position are removed and the elements of @insertme are put in their
  place.  @array is modified in place.
- array functions now normalize negative parameters as offsets from the
  total length of the array.  updated functions include:
  &add, &removeAt, &search, and &subarray.
- added a check to ensure regex pattern cache is flushed every so often.
- tracing/profiling now records Java calls on closures passed as psuedo
  objects.
- the import/from syntax now allows the jar filename to be quoted with 
  double or single quotes to specify a path with spaces.
- fixed a bug with normalized parameters (for both arrays and strings)

2.1-beta 13  (18 Mar 07)
===========
- trace debug option now reports the parameters for a HOES call even if an
  exception is thrown.
- psuedo objects now make an attempt to convert the returned scalar to the
  java type expected by the method.  (oops, oversight on my part :))
- Sleep's flag error function now accepts and returns an Object value. This
  has big implications as checkError($error) can now return the original
  error causing Object (i.e. a descendent of Throwable) that can be 
  manipulated with HOES.  But oh wait... there is more...
- added a try/catch blocks to Sleep.  try/catch blocks are used to catch
  exceptions thrown by sleep scripts and the sleep interpreter.  the
  syntax is:

  try { ... } catch $varname { ... }
