@@ -1,0 +1,2 @@
+Error: Object Access: can not specify empty arg list after : at line 5
+       [[System out] println :<null>]
