@@ -1,0 +1,5 @@
+#
+# a silly syntax error...
+#
+
+[[System out] println:];
